# previoustube

./: .gitignore  CMakeLists.txt  LICENSE  README.md  esp_idf_source.bat  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
.github/workflows/: build.yml  coverity.yml
components/fpm/: CMakeLists.txt
components/inih/: CMakeLists.txt
components/neopixel/: CMakeLists.txt  led_strip_encoder.c
components/neopixel/include/: led_strip_encoder.h
components/pcf8563/: CMakeLists.txt  i2c_helper.c
components/pngdec/: CMakeLists.txt  PNGdec.h  png.inl
components/timegm/: CMakeLists.txt  bsd-timegm.c  timegm.h
components/toml/: CMakeLists.txt
components/touchpad/: CMakeLists.txt  touchpad.c
main/: CMakeLists.txt  clock.cpp  clock.h  flap_sequence.h  flapper.cpp  flapper.h  gui.c  gui.cpp  gui.h  idf_component.yml  lcds.c  lcds.h  led_manager.cpp  led_manager.h  leds.c  leds.h  lvgl_esp_tick_millis.h  main.c  main.cpp  png.cpp  png.h  rtc.cpp  rtc.h  spiram_allocate.cpp  spiram_allocate.h  touchpads.c  touchpads.h  webserver.cpp  webserver.h  wifi.cpp  wifi.h
main/drivers/: lcds.cpp  lcds.h  leds.cpp  leds.h  touchpads.cpp  touchpads.h  wifi.cpp  wifi.h
main/fonts/: oswald_100.c  oswald_120.c  oswald_40.c  oswald_60.c
main/spiffs/: assets-license.txt  wifi.sample.txt
main/spiffs_assets/: wifi.sample.txt
simulator/: CMakeLists.txt  lv_conf.h  lvgl_sdl_tick_millis.h  my_assert.h  simulator_main.cpp
